Fix minor code inspection warnings (base)